--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,7 @@
-add_library(text_render SHARED
-        render.cpp
-        )
-target_include_directories(text_render
-        SYSTEM PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}
-        )
-set_target_properties(text_render PROPERTIES OUTPUT_NAME "text_render"
-        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-        PREFIX "")
+cmake_minimum_required(VERSION 3.22)
+set(CMAKE_CXX_STANDARD 14)
+project(test)
 
-target_link_libraries(text_render
-        PUBLIC
-        )
-
+add_executable(test main.cpp)
+target_link_libraries(test text_render)
+add_subdirectory(text_render)
